--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h3 aligh="center"> Welcome to my personal website.</h3>
         <nav>
             <a href="aboutme.html"><button>About Me</button></a>
-            <button>My Resume</button>
+            <a href="resume.html"><button>My Resume</button></a>
             <button>Contact Me</button>
         </nav>
         <hr>
