--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Mikey Botta</title>
     </head>
     <body>
-        <h1 align="center">Mikey Botta</h1>
+        <h1 align="center">Miiiikey Botta</h1>
         <h3 aligh="center"> Welcome to my personal website.</h3>
         <nav>
             <a href="aboutme.html"><button>About Me</button></a>
