--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head class="header1">
-        <title>Mikey Botta</title>
+        <title>Home - Mikey Botta</title>
         <link rel="stylesheet" href="style.css">
         </head>
 
@@ -19,9 +19,11 @@
             <a href="skye.html"><button>Skye</button></a>
         </nav>
         
+        <div>
         <p title="tooltip here">This is my self-coded site. As such, please understand that I am currently learning HTML and CSS, and not everything may be perfect!</p>
         <h6>thanks for coming and be sure to check back soon</h6>
         <hr>
+        </div>
         <img src="https://tinyurl.com/profilemikeybotta" height="300px" width="300px">
         
     </body>
