--- a/resume.html
+++ b/resume.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<header>
-    <title>My Resume</title>
-    </header>
+<head>
+    <title>Resume - Mikey Botta </title>
+    <link rel="stylesheet" href="style.css">
+    </head>
 <body>
     <h1>My Resume</h1>
     <h6> Download here or read below</h6>
@@ -10,6 +11,9 @@
     </body>
     
 <footer>
-    
+        <div id="footer1">
+        <p>This whole site is under construction... especially this page!</p>
+        <a href="index.html"><button aligh="center" style="color:red;"><b>Go back home</b></button></a>
+        </div>
     </footer>
 </html>
