--- a/skye.html
+++ b/skye.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <title></title>
+    <title>Skye - Mikey Botta</title>
+    <link rel="stylesheet" href="style.css">
     </head>
     
 <body>
@@ -9,5 +10,9 @@
     </body>
     
 <footer>
+        <div id="footer1">
+        <p>This whole site is under construction... especially this page!</p>
+        <a href="index.html"><button aligh="center" style="color:red;"><b>Go back home</b></button></a>
+        </div>
     </footer>
 </html>
