--- a/aboutme.html
+++ b/aboutme.html
@@ -6,9 +6,10 @@
     </head>
     
     <body>
+        <div id="pagetitle">
     <h1>About Me</h1>
-    <h6>Mikey Botta</h6>
     <hr>
+        </div>
     <p>My name is Mikey Botta, and I currently am living in Austin, Texas. I am a Recruiter at Austin Fraser, a recruiting agency with a focus on the tech industry.</p>
         
     </body>
