--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,10 @@
     </head>
     
 <body>
+    <div id="pagetitle">
+    <h1>Contact me</h1>
+    <hr>
+        </div>
     </body>
     
 <footer>
