--- a/resume.html
+++ b/resume.html
@@ -5,8 +5,11 @@
     <link rel="stylesheet" href="style.css">
     </head>
 <body>
-    <h1>My Resume</h1>
-    <h6> Download here or read below</h6>
+    <div id="pagetitle">
+    <h1>About Me</h1>
+    <hr>
+        </div>
+    <h4>Read below to explore my work experiences.</h4>
     
     </body>
     
