--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,16 @@
     <h1>About Me</h1>
     <hr>
         </div>
-    <p>My name is Mikey Botta, and I currently am living in Austin, Texas. I am a Recruiter at Austin Fraser, a recruiting agency with a focus on the tech industry.</p>
+        
+    <div class="bodytext">
+        <h4 style="text-decoration: underline">The short version...</h4>
+        <p>My name is Mikey Botta, and I currently am living in Austin, Texas. I am a Recruiter at Austin Fraser, a recruiting agency in the tech industry. My favorite color is green.
+        </p>
+        <br><hr style="width:50%;">
+        <h4 style="text-decoration:underline;">The long version...</h4>
+        <p> (Adding in tomorrow)
+        </p>
+        </div>
         
     </body>
     <footer>
