--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,19 @@
     
 <body>
     <div id="pagetitle">
-    <h1>Contact me</h1>
+    <h1>Get in touch!</h1>
     <hr>
-        </div>
+    </div>
+    <div class="bodytext">
+        <h3>You can reach out to me in several ways.</h3>
+        <p>My preferred way is connecting on LinkedIn. Phone is too urgent, email is too slow, letters are too inpractical.<br> 
+        Connect with me here:<br><br>
+        <a href="https://www.linkedin.com/in/mikeybotta/" target="_blank"> <img src="https://brand.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Logo.svg.original.svg" width="15%" height="15%"></a></p>
+        <br>
+        <p>
+        The next best way is via e-mail. Shoot me a message at mikeybotta@gmail.com
+        </p>
+    </div>
     </body>
     
 <footer>
