--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 
     <body>  
         <div id="header1">
+        <img src="https://i.imgur.com/yJU1ZFG.png" height="100px" style="float:left; padding-right: 25px;">
         <h1>Mikey Botta</h1>
         <h3> Recruiter. Pop music addict. Dog dad.</h3>
         </div>
-        
+        <br>
         <nav align="center">
             <a href="aboutme.html"><button>About Me</button></a>
             <a href="work.html"><button>My Work</button></a>
