update to mains

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
             <a href="skye.html"><button>Skye</button></a>
         </nav>
         
-        <div>
+        <main>
         <p class="bodytext">Thanks for stopping by to check out my website. This has all been hand-coded from scratch, which I am sure you can tell. My journey in development began in November 2022 with HTML and CSS.</p>
         <hr>
-        </div>
         <img src="https://tinyurl.com/profilemikeybotta" height="300px" width="300px">
         <img src="https://i.imgur.com/qNK3Wa6.jpg" height="300px" width="300px">
         <img src="https://i.imgur.com/w0TMuhw.jpg" height="300px" width="300px"
-        
+        </main>
+
     </body>
     <footer>
         <div id="footer1">
