--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,13 @@
     </div>
     <div class="bodytext">
         <h3>You can reach out to me in several ways.</h3>
-        <p>My preferred way is connecting on LinkedIn. Phone is too urgent, email is too slow, letters are too inpractical.<br> 
-        Connect with me here:<br><br>
+        <p>My preferred way is connecting on LinkedIn. Phone is too urgent, email is filled with spam, and letters are too inpractical, 
+            although there is nothing I like more than a letter.</p>
+        <p>Connect with me here:</p><br><br>
         <a href="https://www.linkedin.com/in/mikeybotta/" target="_blank"> <img src="https://brand.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Logo.svg.original.svg" width="15%" height="15%"></a></p>
         <br>
         <p>
-        The next best way is via e-mail. Shoot me a message at mikeybotta@gmail.com
+        The next best way is via e-mail. Fingers crossed it makes it to my inbox. Shoot me a message at <span class="blurple">mikeybotta@gmail.com</span>
         </p>
     </div>
     </body>
