--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
         </nav>
         
         <main>
-        <p class="bodytext">Thanks for stopping by to check out my website. This has all been hand-coded from scratch, which I am sure you can tell. My journey in development began in November 2022 with HTML and CSS.</p>
+        <p>Thanks for stopping by to check out my website! This has all been hand-coded from scratch, which 
+            I am sure you can tell. We are still very much in the 'scratch' stage here. My journey in development began in early 
+            November 2022 with HTML and CSS, which right now I am focused on mastering. Next up is JS!</p>
         <hr>
+        <p>I am learning through a mixture of self-teaching strategies. My first experiences with development in college have long since been 
+            forgotten, but growing up on a computer has naturally made me <em>rather good</em> at anything tech-y. Well, besides development.
+            So I started refreshing my skills using gamified platforms like Sololearn, and now I'm enrolled in a self-directed bootcamp from Colt Steele.
+        </p>
         <img src="https://tinyurl.com/profilemikeybotta" height="300px" width="300px">
         <img src="https://i.imgur.com/qNK3Wa6.jpg" height="300px" width="300px">
         <img src="https://i.imgur.com/w0TMuhw.jpg" height="300px" width="300px"
