--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
         </head>
 
     <body>  
-        <div id="header1">
+        <header>
         <img src="https://i.imgur.com/yJU1ZFG.png" height="100px" style="float:left; padding-right: 25px;">
         <h1>Mikey Botta</h1>
-        <h3> Recruiter. Pop music addict. Dog dad.</h3>
-        </div>
-        <br>
+        <h2> Recruiter. Pop music addict. Dog dad.</h2>
+        </header>
         <nav align="center">
             <a href="aboutme.html"><button>About Me</button></a>
             <a href="work.html"><button>My Work</button></a>
