--- a/index.html
+++ b/index.html
@@ -1,40 +1,53 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head class="header1">
-        <title>Home - Mikey Botta</title>
-        <link rel="stylesheet" href="style.css">
-        </head>
 
-    <body>  
-        <header>
-        <img src="https://i.imgur.com/yJU1ZFG.png" height="100px" style="float:left; padding-right: 25px;">
-        <h1>Mikey Botta</h1>
-        <h2> Recruiter. Pop music addict. Dog dad.</h2>
-        </header>
-        <nav align="center">
-            <a href="aboutme.html"><button>About Me</button></a>
-            <a href="work.html"><button>My Work</button></a>
-            <a href="contact.html"><button>Contact Me</button></a>
+<head class="header1">
+    <title>Home - Mikey Botta</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header>
+        <div class="mikeylogo">
+            <a href="/" class="menulink">
+                <img src="https://i.imgur.com/yJU1ZFG.png" height="100px" style="float:left; padding-right: 25px;">
+                <h1>Mikey Botta</h1>
+            </a>
+            <p> Recruiter. Pop music addict. Dog dad.</p>
+        </div>
+
+        <nav>
+            <div class="menu">
+                <a href="aboutme.html"><button>About Me</button></a>
+                <a href="work.html"><button>My Work</button></a>
+                <a href="contact.html"><button>Contact Me</button></a>
+            </div>
         </nav>
-        
-        <main>
-        <p>Thanks for stopping by to check out my website! This has all been hand-coded from scratch, which 
-            I am sure you can tell. We are still very much in the 'scratch' stage here. My journey in development began in early 
+    </header>
+
+    <main>
+        <div class="cleardiv"></div>
+        <p>Thanks for stopping by to check out my website! This has all been hand-coded from scratch, which
+            I am sure you can tell. We are still very much in the 'scratch' stage here. My journey in development began
+            in early
             November 2022 with HTML and CSS, which right now I am focused on mastering. Next up is JS!</p>
         <hr>
-        <p>I am learning through a mixture of self-teaching strategies. My first experiences with development in college have long since been 
-            forgotten, but growing up on a computer has naturally made me <em>rather good</em> at anything tech-y. Well, besides development.
-            So I started refreshing my skills using gamified platforms like Sololearn, and now I'm enrolled in a self-directed bootcamp from Colt Steele.
+        <p>I am learning through a mixture of self-teaching strategies. My first experiences with development in college
+            have long since been
+            forgotten, but growing up on a computer has naturally made me <em>rather good</em> at anything tech-y. Well,
+            besides development.
+            So I started refreshing my skills using gamified platforms like Sololearn, and now I'm enrolled in a
+            self-directed bootcamp from Colt Steele.
         </p>
         <img src="https://tinyurl.com/profilemikeybotta" height="300px" width="300px">
         <img src="https://i.imgur.com/qNK3Wa6.jpg" height="300px" width="300px">
-        <img src="https://i.imgur.com/w0TMuhw.jpg" height="300px" width="300px"
-        </main>
+        <img src="https://i.imgur.com/w0TMuhw.jpg" height="300px" width="300px" </main>
 
-    </body>
-    <footer>
-        <div id="footer1">
+</body>
+<footer>
+    <div id="footer1">
         <p>This whole site is under construction... stay tuned in coming months for improvements as I learn more.</p>
-        </div>
-    </footer>
+    </div>
+</footer>
+
 </html>
