--- a/contact.html
+++ b/contact.html
@@ -1,32 +1,56 @@
 <!DOCTYPE html>
-<html lang="en-US"> 
+<html lang="en-US">
+
 <head>
     <title>Contact - Mikey Botta</title>
     <link rel="stylesheet" href="style.css">
-    </head>
-    
+</head>
+
 <body>
-    <div id="pagetitle">
-    <h1>Get in touch!</h1>
-    <hr>
-    </div>
-    <div class="bodytext">
+    <header>
+        <div class="mikeylogo">
+            <a href="/" class="menulink">
+                <img src="https://i.imgur.com/yJU1ZFG.png" height="100px" style="float:left; padding-right: 25px;">
+                <h1>Mikey Botta</h1>
+            </a>
+            <p> Recruiter. Pop music addict. Dog dad.</p>
+        </div>
+
+        <nav>
+            <div class="menu">
+                <a href="aboutme.html"><button>About Me</button></a>
+                <a href="work.html"><button>My Work</button></a>
+                <a href="contact.html"><button>Contact Me</button></a>
+            </div>
+        </nav>
+        <div class="cleardiv"></div>
+    </header>
+
+    <main>
+        <h1>Get in touch!</h1>
+        <hr>
+
         <h3>You can reach out to me in several ways.</h3>
-        <p>My preferred way is connecting on LinkedIn. Phone is too urgent, email is filled with spam, and letters are too inpractical, 
+        <p>My preferred way is connecting on LinkedIn. Phone is too urgent, email is filled with spam, and letters are
+            too inpractical,
             although there is nothing I like more than a letter.</p>
         <p>Connect with me here:</p><br><br>
-        <a href="https://www.linkedin.com/in/mikeybotta/" target="_blank"> <img src="https://brand.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Logo.svg.original.svg" width="15%" height="15%"></a></p>
+        <a href="https://www.linkedin.com/in/mikeybotta/" target="_blank"> <img
+                src="https://brand.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Logo.svg.original.svg"
+                width="15%" height="15%"></a></p>
         <br>
         <p>
-        The next best way is via e-mail. Fingers crossed it makes it to my inbox. Shoot me a message at <span class="blurple">mikeybotta@gmail.com</span>
+            The next best way is via e-mail. Fingers crossed it makes it to my inbox. Shoot me a message at <span
+                class="blurple">mikeybotta@gmail.com</span>
         </p>
-    </div>
-    </body>
-    
+    </main>
+</body>
+
 <footer>
-        <div id="footer1">
+    <div id="footer1">
         <p>This whole site is under construction... especially this page!</p>
         <a href="index.html"><button aligh="center" style="color:red;"><b>Go back home</b></button></a>
-        </div>
-    </footer>
+    </div>
+</footer>
+
 </html>
