--- a/work.html
+++ b/work.html
@@ -1,25 +1,44 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
     <title>Work - Mikey Botta </title>
     <link rel="stylesheet" href="style.css">
-    </head>
+</head>
+
 <body>
     <header>
-    <h1>About Me</h1>
-    <hr>
+        <div class="mikeylogo">
+            <a href="/" class="menulink">
+                <img src="https://i.imgur.com/yJU1ZFG.png" height="100px" style="float:left; padding-right: 25px;">
+                <h1>Mikey Botta</h1>
+            </a>
+            <p> Recruiter. Pop music addict. Dog dad.</p>
+        </div>
+
+        <nav>
+            <div class="menu">
+                <a href="aboutme.html"><button>About Me</button></a>
+                <a href="work.html"><button>My Work</button></a>
+                <a href="contact.html"><button>Contact Me</button></a>
+            </div>
+        </nav>
+        <div class="cleardiv"></div>
     </header>
 
     <main>
-    <h4>Read below to explore my work experiences.</h4>
+
+        <h1> About Me:</h1>
+        <h4>Read below to explore my work experiences.</h4>
     </main>
-    
-    </body>
-    
+
+</body>
+
 <footer>
-        <div id="footer1">
+    <div id="footer1">
         <p>This whole site is under construction... especially this page!</p>
         <a href="index.html"><button aligh="center" style="color:red;"><b>Go back home</b></button></a>
-        </div>
-    </footer>
+    </div>
+</footer>
+
 </html>
