--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="mikeylogo">
             <a href="/" class="menulink">
-                <img src="https://i.imgur.com/yJU1ZFG.png" height="100px" style="float:left; padding-right: 25px;">
+                <img src="https://i.imgur.com/yJU1ZFG.png" style="float:left; padding-right: 25px;">
                 <h1>Mikey Botta</h1>
             </a>
             <p> Recruiter. Pop music addict. Dog dad.</p>
