--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
         <div class="mikeylogo">
             <a href="/" class="menulink">
                 <img src="https://i.imgur.com/yJU1ZFG.png" style="float:left; padding-right: 25px;">
-                <h1>Mikey Botta</h1>
             </a>
-            <p> Recruiter. Pop music addict. Dog dad.</p>
         </div>
 
         <nav>
             <div class="menu">
-                <a href="aboutme.html"><button>About Me</button></a>
+                <a href="aboutme.html"><button>About Me!</button></a>
                 <a href="work.html"><button>My Work</button></a>
                 <a href="contact.html"><button>Contact Me</button></a>
             </div>
@@ -27,6 +25,7 @@
     </header>
 
     <main>
+        <h1 id="introh1">Mikey Botta</h1>
         <p>Thanks for stopping by to check out my website! This has all been hand-coded from scratch, which
             I am sure you can tell. We are still very much in the 'scratch' stage here. My journey in development began
             in early
