--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <nav>
             <div class="menu">
-                <a href="aboutme.html"><button>About Me!</button></a>
+                <a href="aboutme.html"><button>About Me</button></a>
                 <a href="work.html"><button>My Work</button></a>
                 <a href="contact.html"><button>Contact Me</button></a>
             </div>
