--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <div class="mikeylogo">
-            <a href="/" class="menulink">
-                <img src="https://i.imgur.com/yJU1ZFG.png" style="float:left; padding-right: 25px;">
+            <a href="/">
+                <img src="https://i.imgur.com/yJU1ZFG.png">
             </a>
         </div>
 
