--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="mikeylogo">
             <a href="/">
-                <img src="https://i.imgur.com/yJU1ZFG.png">
+                <img class="mikeylogo" src="https://i.imgur.com/yJU1ZFG.png">
             </a>
         </div>
 
