--- a/work.html
+++ b/work.html
@@ -9,11 +9,9 @@
 <body>
     <header>
         <div class="mikeylogo">
-            <a href="/" class="menulink">
-                <img src="https://i.imgur.com/yJU1ZFG.png" height="100px" style="float:left; padding-right: 25px;">
-                <h1>Mikey Botta</h1>
+            <a href="/">
+                <img class="mikeylogo" src="https://i.imgur.com/yJU1ZFG.png">
             </a>
-            <p> Recruiter. Pop music addict. Dog dad.</p>
         </div>
 
         <nav>
