--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="mikeylogo">
             <a href="/">
-                <img class="mikeylogo" src="https://i.imgur.com/yJU1ZFG.png">
+                <img class="mikeylogo" src="/docs/assets/mikeylogo.png">
             </a>
         </div>
 
@@ -38,9 +38,9 @@
             So I started refreshing my skills using gamified platforms like Sololearn, and now I'm enrolled in a
             self-directed bootcamp from Colt Steele.
         </p>
-        <img src="https://tinyurl.com/profilemikeybotta" height="300px" width="300px">
-        <img src="https://i.imgur.com/qNK3Wa6.jpg" height="300px" width="300px">
-        <img src="https://i.imgur.com/w0TMuhw.jpg" height="300px" width="300px" </main>
+        <img src="/docs/assets/IMG_1138.png" height="300px" width="300px">
+        <img src="/docs/assets/img1.png" height="300px" width="300px">
+        <img src="/docs/assets/img2.jpg" height="300px" width="300px" </main>
 
 </body>
 <footer>
