--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <main>
         <h1 id="introh1">Mikey Botta</h1>
-        <p>Thanks for stopping by to check out my website! This has all been hand-coded from scratch, which
+        <p>Thanks for stopping by to check out my website. This has all been hand-coded from scratch, which
             I am sure you can tell. We are still very much in the 'scratch' stage here. My journey in development began
             in early
             November 2022 with HTML and CSS, which right now I am focused on mastering. Next up is JS!</p>
