--- a/aboutme.html
+++ b/aboutme.html
@@ -26,16 +26,29 @@
     <main>
         <h1>About Me</h1>
         <hr>
+        <h2>The short version of it...</h2>
+        <div class="bodydiv">
+            <p>My name is Mikey, and I'm 23 years old. I am currently living in the beautiful city of Austin, Texas.
+                As someone who loves the outdoors, warm weather, and good food, ATX has proven itself to be an
+                incredible choice.
+                I have a Mini Aussiedoodle named Skye, who is just over a year old, although I doubt her puppy energy is
+                ever going to fade.
+                I really love pop music, especially (right now) Zara Larsson, Madison Beer, and Taylor Swift.
+                I work as a tech recruiter at Austin Fraser, a pretty small recruiting agency based here in Austin.
+                And that about wraps me up in a nutshell, but <strong>read on for an expansive journey through my life,
+                    my career, and my future.</strong>
+            </p>
+        </div>
+        <hr class="smalldiv">
+        <h2>My journey...</h2>
+        <h3>it all started in new jersey</h3>
+        <div class="journeydiv">
+            <img src="/docs/assets/journey1.jpg" alt="Young Mikey" class="journeyimg">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum illo nisi id veritatis nam eos eius
+                repudiandae sint ipsa, iusto consectetur maiores eaque. Ipsum voluptate ullam magni dignissimos
+                doloremque repudiandae!
+        </div>
 
-        <h4 style="text-decoration: underline">The short version...</h4>
-        <p>My name is Mikey Botta, and I currently am living in Austin, Texas. I am a Recruiter at Austin Fraser, a
-            recruiting agency in the tech industry. My favorite color is green.
-        </p>
-        <br>
-        <hr style="width:50%;">
-        <h4 style="text-decoration:underline;">The long version...</h4>
-        <p> (Adding in soon)
-        </p>
     </main>
 
 </body>
