--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
             So I started refreshing my skills using gamified platforms like Sololearn, and now I'm enrolled in a
             self-directed bootcamp from Colt Steele.
         </p>
-        <img src="/docs/assets/IMG_1138.png" height="300px" width="300px">
-        <img src="/docs/assets/img1.png" height="300px" width="300px">
-        <img src="/docs/assets/img2.jpg" height="300px" width="300px" </main>
+        <img src="/docs/assets/IMG_1138.png" class="mainimgs">
+        <img src="/docs/assets/img1.png" class="mainimgs">
+        <img src="/docs/assets/img2.jpg" class="mainimgs" 
+    </main>
 
 </body>
+
 <footer>
     <div id="footer1">
         <p>This whole site is under construction... stay tuned in coming months for improvements as I learn more.</p>
