--- a/aboutme.html
+++ b/aboutme.html
@@ -42,11 +42,18 @@
         <hr class="smalldiv">
         <h2>My journey...</h2>
         <h3>it all started in new jersey</h3>
+
         <div class="journeydiv">
             <img src="/docs/assets/journey1.jpg" alt="Young Mikey" class="journeyimg">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum illo nisi id veritatis nam eos eius
-                repudiandae sint ipsa, iusto consectetur maiores eaque. Ipsum voluptate ullam magni dignissimos
-                doloremque repudiandae!
+            <p>I was raised in a small town in northern New Jersey. Whereas the initial impression of NJ for many
+                is of congested suburbs and the stinky Newark airport, my hometown, Sparta, is set up on a mountain,
+                surrounded by woods, with clean air and bright stars in the night sky.</p>
+        </div>
+        <hr class="smalldiv2">
+        <div class="journeydiv2">
+            <img src="/docs/assets/uofsc.png" alt="Mikey in college" class="journeyimg">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure deleniti doloribus ex at, explicabo quas atque amet accusantium similique assumenda expedita minima soluta voluptatem et aliquam asperiores corporis culpa magnam!
+            Labore, fugiat culpa consequatur temporibus facere magni a commodi odit dicta explicabo cumque modi magnam nesciunt, officia voluptatibus harum non nulla sint. Ad at fugit itaque rem non dolor quis.</p>
         </div>
 
     </main>
