--- a/aboutme.html
+++ b/aboutme.html
@@ -50,12 +50,36 @@
                 surrounded by woods, with clean air and bright stars in the night sky.</p>
         </div>
         <hr class="smalldiv2">
-        <div class="journeydiv2">
-            <img src="/docs/assets/uofsc.png" alt="Mikey in college" class="journeyimg">
+
+        <div class="journeydiv">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure deleniti doloribus ex at, explicabo quas atque amet accusantium similique assumenda expedita minima soluta voluptatem et aliquam asperiores corporis culpa magnam!
             Labore, fugiat culpa consequatur temporibus facere magni a commodi odit dicta explicabo cumque modi magnam nesciunt, officia voluptatibus harum non nulla sint. Ad at fugit itaque rem non dolor quis.</p>
+            <img src="/docs/assets/uofsc.png" alt="Mikey in college" class="journeyimg">
         </div>
+        <hr class="smalldiv2">
 
+        <div class="journeydiv">
+            <img src="/docs/assets/camp1.png" alt="first summer at camp laurel" class="journeyimg">
+            <p>I was raised in a small town in northern New Jersey. Whereas the initial impression of NJ for many
+                is of congested suburbs and the stinky Newark airport, my hometown, Sparta, is set up on a mountain,
+                surrounded by woods, with clean air and bright stars in the night sky.</p>
+        </div>
+        <hr class="smalldiv2">
+
+        <div class="journeydiv">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure deleniti doloribus ex at, explicabo quas atque amet accusantium similique assumenda expedita minima soluta voluptatem et aliquam asperiores corporis culpa magnam!
+            Labore, fugiat culpa consequatur temporibus facere magni a commodi odit dicta explicabo cumque modi magnam nesciunt, officia voluptatibus harum non nulla sint. Ad at fugit itaque rem non dolor quis.</p>
+            <img src="/docs/assets/camp2.ong" alt="second summer at camp laurel" class="journeyimg">
+        </div>
+        <hr class="smalldiv2">
+
+        <div class="journeydiv">
+            <img src="/docs/assets/camp3.png" alt="third summer at camp laurel" class="journeyimg">
+            <p>I was raised in a small town in northern New Jersey. Whereas the initial impression of NJ for many
+                is of congested suburbs and the stinky Newark airport, my hometown, Sparta, is set up on a mountain,
+                surrounded by woods, with clean air and bright stars in the night sky.</p>
+        </div>
+        <hr class="smalldiv2">
     </main>
 
 </body>
