--- a/aboutme.html
+++ b/aboutme.html
@@ -26,7 +26,7 @@
     <main>
         <h1>About Me</h1>
         <hr>
-        <h2>The short version of it...</h2>
+        <h2>TLDR:</h2>
         <div class="bodydiv">
             <p>My name is Mikey, and I'm 23 years old. I am currently living in the beautiful city of Austin, Texas.
                 As someone who loves the outdoors, warm weather, and good food, ATX has proven itself to be an
@@ -40,46 +40,77 @@
             </p>
         </div>
         <hr class="smalldiv">
-        <h2>My journey...</h2>
-        <h3>it all started in new jersey</h3>
+        <h2>and, my life story:</h2>
 
         <div class="journeydiv">
-            <img src="/docs/assets/journey1.jpg" alt="Young Mikey" class="journeyimg">
+            <img src="/docs/assets/journey1.jpg" alt="Young Mikey" class="journeyimgl">
             <p>I was raised in a small town in northern New Jersey. Whereas the initial impression of NJ for many
                 is of congested suburbs and the stinky Newark airport, my hometown, Sparta, is set up on a mountain,
                 surrounded by woods, with clean air and bright stars in the night sky.</p>
         </div>
         <hr class="smalldiv2">
 
+
         <div class="journeydiv">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure deleniti doloribus ex at, explicabo quas atque amet accusantium similique assumenda expedita minima soluta voluptatem et aliquam asperiores corporis culpa magnam!
-            Labore, fugiat culpa consequatur temporibus facere magni a commodi odit dicta explicabo cumque modi magnam nesciunt, officia voluptatibus harum non nulla sint. Ad at fugit itaque rem non dolor quis.</p>
-            <img src="/docs/assets/uofsc.png" alt="Mikey in college" class="journeyimg">
+            <p class="journeyp">
+                <img src="https://www.mikeybotta.com/docs/assets/uofsc.png" alt="Mikey in college" class="journeyimgr">
+               From there, I went down to South Carolina for college. USC was affordable, had a nice campus, and... that's about all of the positive
+               things I have to say. Oh, and I was able to graduate in just three years! So I'm happy to have gone there but did not really
+               enjoy the experience overall. I received my <strong>Bachelors of Science in Biological Sciences</strong> degree and
+               graduated with <em>magna cum laude</em> honors in stride with my 3.82 GPA.</p>
         </div>
         <hr class="smalldiv2">
 
         <div class="journeydiv">
-            <img src="/docs/assets/camp2018.png" alt="first summer at camp laurel" class="journeyimg">
-            <p>I was raised in a small town in northern New Jersey. Whereas the initial impression of NJ for many
-                is of congested suburbs and the stinky Newark airport, my hometown, Sparta, is set up on a mountain,
-                surrounded by woods, with clean air and bright stars in the night sky.</p>
+            <p class="journeyp">
+                <img src="/docs/assets/smallsugar.png" alt="my first job" class="journeyimgl">
+                <em>smallSUGAR</em> was my first job, which I had from 2018 to 2019 while at USC. I loved our cafe, our pastries, and my team.
+                I took a lot of pride in the business as I was one of the original first hires, and helped with everything from the Grand
+                Opening to all the changes over the next two years. If I had to describe in one word what I did, I'd probably have to say 'Barista'
+                but it really was a lot more than just that. Plus, over time, I assisted with training new staff as they were onboarded, and this was 
+                overall a really great learning experience as a leader. Plus, tons of free food and coffee!
+            </p>
+        </div>
+        <hr class="smalldiv2">
+
+
+        <div class="journeydiv">
+            <p class="journeyp">
+                <img src="/docs/assets/camp2018.png" alt="first summer at camp laurel" class="journeyimgr">
+                I needed an escape from reality after my first year in college. I'd decided to go to summer camp. There's so many great camps 
+                out there, but I wanted to go all out. So I searched "most expensive camps in the US" and made my choices from there. I had some 
+                tough choices but I ended up choosing Camp Laurel in Maine, the deciding factor being the beauty of their lake. And I truly,
+                honestly, genuinely, sincerely, <strong>had the best summer of my life.</strong> The type that I don't think I will ever beat.
+                Now, it was hell while I was there... 7 weeks of 24/7 responsibility for the lives of 15 kids, and I was so burnt out by the end.
+                But once camp ended, I realized how perfect the camp experience is for me. And I missed it, a lot.
+            </p>
         </div>
         <hr class="smalldiv2">
 
         <div class="journeydiv">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure deleniti doloribus ex at, explicabo quas atque amet accusantium similique assumenda expedita minima soluta voluptatem et aliquam asperiores corporis culpa magnam!
-            Labore, fugiat culpa consequatur temporibus facere magni a commodi odit dicta explicabo cumque modi magnam nesciunt, officia voluptatibus harum non nulla sint. Ad at fugit itaque rem non dolor quis.</p>
-            <img src="/docs/assets/camp2019.ong" alt="second summer at camp laurel" class="journeyimg">
+            <p class="journeyp">
+                <img src="/docs/assets/camp2019.png" alt="second summer at camp laurel" class="journeyimgl">
+               ...and then I came back again! Despite the intense burnout at the end of my first summer, I spent the next 10 months 
+               missing Camp Laurel, my kids, my co-counselors, being disconnected from technology, and having my meals cooked, laundry
+               washed and folded, and no worries. Well, my cabin this summer was tough so after all I had tons of worries, 24/7. Not many
+               counselors return year-to-year so I played a big role in helping mentor my fellow counselors, especially before the kids
+               got there, but also throughout the whole summer. With my experience, I'd become a leader in our campus and provided a 
+               lot of guidance, support, and advice to our 30 counselors throughout the entire summer.
+            </p>
         </div>
         <hr class="smalldiv2">
 
         <div class="journeydiv">
-            <img src="/docs/assets/camp2021.png" alt="third summer at camp laurel" class="journeyimg">
-            <p>I was raised in a small town in northern New Jersey. Whereas the initial impression of NJ for many
-                is of congested suburbs and the stinky Newark airport, my hometown, Sparta, is set up on a mountain,
-                surrounded by woods, with clean air and bright stars in the night sky.</p>
+            <p class="journeyp">
+                <img src="/docs/assets/camp2021.png" alt="third summer at camp laurel" class="journeyimgr">
+                That last summer being really tough not dissaude me . I'd planned to come back for a 3rd summer in 2020, and all was good to go until COVID-19 cancelled
+                all of my plans! I'll forever be bummed about that as it felt like a summer in my paradise was stolen from me. Realistically you
+                can't be a camp counselor forever, and I'd just graduated.... but I made it work, couldn't not go back one more time-- and returned
+                for another summer in 2021! I took on even more leadership roles this year, and almost felt like I could do this for the rest of my life.
+            </p>
         </div>
         <hr class="smalldiv2">
+
     </main>
 
 </body>
