--- a/index.html
+++ b/index.html
@@ -8,14 +8,9 @@
 
 <body>
     <header>
-        <div class="mikeylogo">
-            <a href="/">
-                <img class="mikeylogo" src="/docs/assets/mikeylogo.png">
-            </a>
-        </div>
-
         <nav>
             <div class="menu">
+                <a href="/"><button>Home</button></a>
                 <a href="aboutme.html"><button>About Me</button></a>
                 <a href="work.html"><button>My Work</button></a>
                 <a href="contact.html"><button>Contact Me</button></a>
