--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     </header>
 
     <main>
-        <h1 id="introh1">Mikey Botta</h1>
+        <img src="/docs/assets/mblogo.png" alt="logo">
+        <br>
         <p>Thanks for stopping by to check out my website. This has all been hand-coded from scratch, which
             I am sure you can tell. We are still very much in the 'scratch' stage here. My journey in development began
             in early
