--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
             </div>
         </nav>
         <div class="cleardiv"></div>
+        <div class="centered">
+            <img src="/docs/assets/mikeylogo1.png"
+                alt="logo">
+        </div>
     </header>
 
     <main>
-        <img src="/docs/assets/mblogo.png" alt="logo">
-        <br>
         <p>Thanks for stopping by to check out my website. This has all been hand-coded from scratch, which
             I am sure you can tell. We are still very much in the 'scratch' stage here. My journey in development began
             in early
@@ -36,8 +38,7 @@
         </p>
         <img src="/docs/assets/IMG_1138.png" class="mainimgs">
         <img src="/docs/assets/img1.png" class="mainimgs">
-        <img src="/docs/assets/img2.jpg" class="mainimgs" 
-    </main>
+        <img src="/docs/assets/img2.jpg" class="mainimgs" </main>
 
 </body>
 
