--- a/skye.html
+++ b/skye.html
@@ -1,21 +1,39 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
     <title>Skye - Mikey Botta</title>
     <link rel="stylesheet" href="style.css">
-    </head>
-    
+</head>
+
 <body>
-      <div id="pagetitle">
-    <h1>Skye</h1>
-    <hr>
+    <header>
+        <nav>
+            <div class="menu">
+                <a href="/"><button>Home</button></a>
+                <a href="aboutme.html"><button>About Me</button></a>
+                <a href="work.html"><button>My Work</button></a>
+                <a href="contact.html"><button>Contact Me</button></a>
+            </div>
+        </nav>
+        <div class="cleardiv"></div>
+        <div class="centered">
+            <img src="/docs/assets/mikeylogo1.png" alt="logo">
         </div>
-    </body>
-    
+    </header>
+    <main>
+        <div id="pagetitle">
+            <h1>Skye</h1>
+            <hr>
+        </div>
+    </main>
+</body>
+
 <footer>
-        <div id="footer1">
+    <div id="footer1">
         <p>This whole site is under construction... especially this page!</p>
         <a href="index.html"><button aligh="center" style="color:red;"><b>Go back home</b></button></a>
-        </div>
-    </footer>
+    </div>
+</footer>
+
 </html>
