--- a/work.html
+++ b/work.html
@@ -8,26 +8,33 @@
 
 <body>
     <header>
-        <div class="mikeylogo">
-            <a href="/">
-                <img class="mikeylogo" src="https://i.imgur.com/yJU1ZFG.png">
-            </a>
-        </div>
-
         <nav>
             <div class="menu">
+                <a href="/"><button>Home</button></a>
                 <a href="aboutme.html"><button>About Me</button></a>
                 <a href="work.html"><button>My Work</button></a>
                 <a href="contact.html"><button>Contact Me</button></a>
             </div>
         </nav>
         <div class="cleardiv"></div>
+        <div class="centered">
+            <img src="/docs/assets/mikeylogo1.png"
+                alt="logo">
+        </div>
     </header>
 
     <main>
 
-        <h1> About Me:</h1>
-        <h4>Read below to explore my work experiences.</h4>
+        <h1> My Work</h1>
+        <h2>(Header)</h2>
+        <h3>Right now</h3>
+        <p>Currently, I am a recruiter at Austin Fraser.</p>
+        <hr class="smalldiv2">
+        <h3>In the past</h3>
+        <p>(past)</p>
+        <hr class="smalldiv2">
+
+        
     </main>
 
 </body>
