--- a/contact.html
+++ b/contact.html
@@ -8,20 +8,19 @@
 
 <body>
     <header>
-        <div class="mikeylogo">
-            <a href="/">
-                <img class="mikeylogo" src="https://i.imgur.com/yJU1ZFG.png">
-            </a>
-        </div>
-
         <nav>
             <div class="menu">
+                <a href="/"><button>Home</button></a>
                 <a href="aboutme.html"><button>About Me</button></a>
                 <a href="work.html"><button>My Work</button></a>
                 <a href="contact.html"><button>Contact Me</button></a>
             </div>
         </nav>
         <div class="cleardiv"></div>
+        <div class="centered">
+            <img src="/docs/assets/mikeylogo1.png"
+                alt="logo">
+        </div>
     </header>
 
     <main>
